# Hybrid_Blockchain_for_Retails

./: .gitignore  PrCsample.sol  QRCodeExample.html  README.md  ipfs_locator_zone.json
5.SolutionArchitecture/: MerkleTree.cpp
Code/: CMakeLists.txt  JSsample.py  MerkleTree  MerkleTree.cpp  SNsample.sol  mempool  mempool.cpp
Code/ConMemPool/: baseline  baseline.cpp  concurrency_mempool  concurrency_mempool.cpp  test.py
Code/MemoryPool/: alltest.py  mempool.cpp  mempool.hpp  mempool_prototype  mempool_prototype.cpp  spacetest  spacetest.cpp  timetest  timetest.cpp
Code/MerkleTree/: CMakeLists.txt  Main.cpp  MerkleTree.hpp  MerkleTree_Build.cpp  MerkleTree_Proof.cpp  MerkleTree_core.cpp  MerkleTree_utils.cpp  README.md
ROI/: Case-based Estimation.md  Precise Mathematical Modeling.md
